--- a/processor/build.gradle
+++ b/processor/build.gradle
@@ -3,7 +3,16 @@ apply plugin: 'java'
 targetCompatibility = JavaVersion.VERSION_1_8
 sourceCompatibility = JavaVersion.VERSION_1_8
 
+task copyTestResources(type: Copy) {
+  from "${projectDir}/src/test/resources"
+  into "${buildDir}/classes/test"
+}
+processTestResources.dependsOn copyTestResources
+
 dependencies {
   compile project(':annotations')
   compile 'com.squareup:javapoet:1.6.1'
+
+  testCompile 'junit:junit:4.12'
+  testCompile 'com.google.testing.compile:compile-testing:0.9'
 }
