Add publishing setting

--- a/annotations/build.gradle
+++ b/annotations/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'java'
+apply plugin: 'maven'
+group = 'com.github.yatatsu'
 
 targetCompatibility = JavaVersion.VERSION_1_8
 sourceCompatibility = JavaVersion.VERSION_1_8
