Support custom package name for schema class
When using in library project, `FS.java` cause collision because
it has fixed package `com.yatatsu.fieldschema`.
So support apt option to avoid this, here is example.

```build.gradle
apt {
  arguments {
    fieldSchemaPackage 'com.example.app'
  }
}
```

And generate class is `com.example.app.FS`.
default is `com.yatatsu.fieldschema` as before.

--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -3,7 +3,7 @@ buildscript {
     jcenter()
   }
   dependencies {
-    classpath "io.realm:realm-gradle-plugin:0.89.1"
+    classpath "io.realm:realm-gradle-plugin:0.90.0"
   }
 }
 
@@ -32,6 +32,12 @@ android {
   compileOptions {
     sourceCompatibility JavaVersion.VERSION_1_8
     targetCompatibility JavaVersion.VERSION_1_8
+  }
+}
+
+apt {
+  arguments {
+    fieldSchemaPackage 'com.example.yatatsu.fieldschema'
   }
 }
 
