--- a/lib-project-sample/build.gradle
+++ b/lib-project-sample/build.gradle
@@ -7,27 +7,24 @@ buildscript {
   }
 }
 
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 apply plugin: 'android-apt'
 apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'realm-android'
+
+configurations {
+  provided
+}
 
 android {
   compileSdkVersion 23
   buildToolsVersion "23.0.3"
 
   defaultConfig {
-    applicationId "com.example.yatatsu.fieldschema"
     minSdkVersion 19
     targetSdkVersion 23
     versionCode 1
     versionName "1.0"
-  }
-  buildTypes {
-    release {
-      minifyEnabled false
-      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-    }
   }
   compileOptions {
     sourceCompatibility JavaVersion.VERSION_1_8
@@ -37,14 +34,13 @@ android {
 
 apt {
   arguments {
-    fieldSchemaPackage 'com.example.yatatsu.fieldschema'
+    fieldSchemaPackage 'com.example.yatatsu.libproject'
   }
 }
 
 dependencies {
   apt project(':processor')
   compile project(':annotations')
-  compile project(':lib-project-sample')
 
   testCompile 'junit:junit:4.12'
   compile 'com.android.support:appcompat-v7:23.3.0'
